<resources>
    <string name="app_name">MaReu</string>
    <string name="action_filter">Filter</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="addReunion">Add Reunion</string>
    <string name="action_save">Enregistrer</string>
    <string name="Tittle_Reu">Ajouter un titre</string>
    <string name="Date">Date</string>
    <string name="Time">Horaires</string>
    <string name="Room">Salle : </string>
    <string name="Participant">Participant</string>
    <string name="Name">Nom Prénom</string>
    <string name="Function">Fonction</string>
    <string name="Phone">Téléphone</string>
    <string name="Mail">Mail</string>
    <string name="Tittle">Tittre</string>
    <string name="Error_Mail">Adresse e-mail invalide</string>
    <string name="Error_Participant">Aucun Participant</string>
    <string name="Error_Date">Date invalide</string>
    <string name="Reunion_Okay">Reunion créer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
