<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.AddParticipant">

    <ImageButton
        android:id="@+id/activity_participant_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_24px"
        android:background="@null"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/activity_add_save_btn"
        app:layout_constraintBottom_toBottomOf="@id/activity_participant_save_btn"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/activity_participant_save_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/activity_participant_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:textSize="20dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/activity_participant_save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/activity_participant_fonction_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Function"
        android:textSize="20dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/activity_participant_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/activity_participant_phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Phone"
        android:textSize="20dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/activity_participant_fonction_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/activity_participant_mail_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Mail"
        android:textSize="20dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/activity_participant_phone_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <ImageView
        android:id="@+id/activity_participant_avatar_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/activity_participant_mail_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>